# warpxm-testing

./: .gitignore  benchmarks.db  pyproject.toml  wxm-bench.example.toml
grafana/dashboards/: provider.yaml  warpxm-benchmarks.json
grafana/datasources/: warpxm-benchmarks.yaml
scripts/: bench-history.sh
src/warpxm_testing/: cli.py  database.py  hardware.py  runner.py
src/warpxm_testing/benchmarks/: advection_1d_128cells_ssprk3_third_order_20000steps.inp  advection_1d_128cells_ssprk3_third_order_2000steps.inp  advection_1d_64cells_ssprk3_third_order_2000steps.inp
src/wxm_bench/: builder.py  cli.py  config.py  database.py  hardware.py  runner.py  timing_parser.py
src/wxm_bench/benchmarks/: __init__.py  advection_1d_128cells_ssprk3_third_order_2000steps.inp  advection_1d_64cells_ssprk3_third_order_2000steps.inp
