[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warpxm-testing"
version = "0.1.0"
description = "Performance testing framework for WARPXM"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
warpxm-test = "warpxm_testing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
