[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wxm-bench"
version = "0.1.0"
description = "Performance testing framework for WARPXM"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
wxm-bench = "wxm_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
